--- a/build.gradle
+++ b/build.gradle
@@ -6,4 +6,12 @@ repositories {
 
 dependencies {
     testCompile 'org.junit.jupiter:junit-jupiter:5.4.2'
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    testCompileOnly 'org.projectlombok:lombok:1.18.20'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
+}
+
+test {
+    useJUnitPlatform()
 }
